--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,35 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/root_list_detail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-    <View
-            android:id="@+id/cont_colored_background"
+
+
+    <ImageView
+            android:transitionName="@string/transition_drawable"
+            android:id="@+id/imv_colored_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/div_center"/>
 
+
     <TextView
+            android:transitionName="@string/transition_date"
+            android:id="@+id/lbl_date_and_time_header"
             style="@style/Text.Primary"
-            android:id="@+id/tv_date_time_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/div_center"
-            tools:text="Data de afisat"
-    />
+            android:layout_above="@+id/lbl_message_body"
+            android:background="@color/colorTransparentBlack"
+            android:padding="16dp"
+            tools:text="2:43AM 09/7/2018"/>
 
     <View
             android:id="@+id/div_center"
+            style="@style/Text.Primary"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+
+    />
 
     <TextView
-            style="@style/Text.Secondary"
-            android:id="@+id/tv_message_body"
+            android:transitionName="@string/transition_message"
+            android:id="@+id/lbl_message_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/div_center"
-            tools:text="Cica e titlul lung pentru care se dace afisarea"/>
-
+            android:padding="16dp"
+            tools:text="Check out content like Fragmented Podcast to expose yourself to the knowledge, ideas, and opinions of experts in your field"/>
 </RelativeLayout>
